version 1.8.7, in progress
- GUI enhancement: add a Windows menu to help keep track
  of gretl windows
- Fix bug: crash on error in user_matrix_ols()
- Fix bug: "append" should work in more cases

11/25/2008 version 1.8.6
- Fix bug: the "print" command for series fails after 
  exiting a loop with the --progressive option set
- ARIMAX models: follow the practice of most software
  and difference both the dependent variable and the
  exogenous regressors; a new option, --y-diff-only,
  restores the old behavior of leaving the regressors in
  levels.  This resolves bug 1972626.
- arima: fix some "corner case" bugs and extend the options
  that can be controlled via the GUI
- Add hyperbolic functions, asinh and friends
- heckit: use analytical score, and use hyperbolic
  transformation in estimating rho
- Fix bug: a native gdt file made from imported data could
  end up containing non-UTF-8 characters (and hence not
  be openable)
- Fix bug: the internal $error variable associated with
  the --continue option to (e.g.) "arima" could get stuck
  on within a command loop
- Fix bug: ensure that the "dataset addobs" command is
  recorded in the session command log when observations
  are added in the course of forecasting
- Fix bug: corruption in saving GARCH models in a session
  file
- "fcast": add a --plot option to generate a plot of the
  forecast in batch mode
- L-BFGS-B: add a "set" variable, lbfgs_mem, to control the
  number of corrections used in the limited memory matrix 
- GUI dialogs for mle, gmm: add controller for BFGS details
- "scatters" command: add an --output option as for the
  "gnuplot" command
- Fix bug: the popup menu item "Execute line", in script
  windows, was not working
- Fix bug: bad Weibull plot (under "Distribution graphs")
  when adding Weibull curve to an existing plot that includes
  negative values of x
- Add facility to display normal and logistic CDFs
- Add convenience function: logistic()